# My_period

./: Dockerfile  README.md  docker-compose.yaml  manage.py  pyproject.toml  render.yaml
a_period_tracker/: settings.py  urls.py
my_period/: admin.py  apps.py  models.py  secret_key.py  serializer.py  urls.py  views.py
my_period/migrations/: 0001_initial.py  0002_alter_personalinfo_owner.py  0003_chatinfo.py
